manifests/applications/media/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prowlarr
  name: prowlarr-prod-media-deployment
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  strategy: {}
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
        readOnlyRootFilesystem: true
      automountServiceAccountToken: false
      containers:
      - securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        image: ghcr.io/csbdc/prowlarr:main
        name: prowlarr
        livenessProbe:
          httpGet:
            path: /ping
            port: 8989
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /ping
            port: 8989
          initialDelaySeconds: 3
          periodSeconds: 3
        ports:
          - containerPort: 9696
            name: http
            protocol: TCP
        resources: {}
        volumeMounts:
        - name: data
          mountPath: /config
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: prowlarr-prod-media-pvc
